<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_calc"
            android:title="@string/menu_calculator" />

        <item
            android:id="@+id/nav_browser"
            android:icon="@drawable/ic_browser"
            android:title="@string/menu_browser" />

        <item
            android:id="@+id/nav_player"
            android:icon="@drawable/ic_music"
            android:title="@string/menu_player" />

        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_sensor"
            android:title="@string/menu_sensors" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_map" />
    </group>
</menu>